--- a/doc/INSTALL.txt
+++ b/doc/INSTALL.txt
@@ -1,16 +1,17 @@
-## Joruri Mail v1.3.0 インストールマニュアル                2013.10.11
+## Joruri Mail Simple One v1.3.0 インストールマニュアル       2014.6.3
 
 **********************************************************************
  1 想定環境
 **********************************************************************
 
 [システム]
-OS         : CentOS 6.2
+OS         : CentOS 6.5
 Webサーバ  : Apache 2.2
 DBシステム : MySQL 5
 Ruby       : 1.9.2
 Rails      : 3.0.0
-Mailサーバ : SMTP, IMAP4
+SMTPサーバ : Postfix 2.6.6
+IMAP4サーバ: 2.0.9
 
 [設定]
 IPアドレス : 192.168.0.2
@@ -49,18 +50,20 @@ rootユーザに変更します。
 
   # cd /usr/local/src
   # wget http://joruri.org/download/jorurimail/jorurimail-1.3.0.tar.gz
-  # wget ftp://ftp.ruby-lang.org/pub/ruby/1.9/ruby-1.9.2-p290.tar.gz
-  # wget http://rubyforge.org/frs/download.php/74445/rubygems-1.6.2.tgz
+  # wget http://ftp.ruby-lang.org/pub/ruby/ruby-1.9.2-p320.tar.gz
+  # wget http://production.cf.rubygems.org/rubygems/rubygems-1.6.2.tgz
 
 Joruriユーザを作成します。
 
-  # useradd joruri
+  # groupadd -g 5000 joruri
+  # useradd -u 5000 -g 5000 joruri
   # passwd joruri
 
 Joruriソースコードを設置します。
 
   # mkdir /var/share
-  # tar xvzf jorurimail-1.3.0.tar.gz -C /var/share
+  # cd /var/share
+  # git clone https://github.com/kisugon/jorurimail-simpleone.git
   # chown -R joruri:joruri /var/share/jorurimail
 
 **********************************************************************
@@ -125,8 +128,41 @@ joruriユーザを作成します。
 Rubyをインストールします。
 
   # cd /usr/local/src
-  # tar xvzf ruby-1.9.2-p290.tar.gz
-  # cd ruby-1.9.2-p290
+  # tar xvzf ruby-1.9.2-p320.tar.gz
+  # cd ruby-1.9.2-p320
+
+ext/openssl/ossl_pkey_ec.cを修正します。
+
+  # vi ext/openssl/ossl_pkey_ec.c
+
+  ***************
+  *** 761,768 ****
+  --- 761,770 ----
+                    method = EC_GFp_mont_method();
+                } else if (id == s_GFp_nist) {
+                    method = EC_GFp_nist_method();
+  + #if !defined(OPENSSL_NO_EC2M)
+                } else if (id == s_GF2m_simple) {
+                    method = EC_GF2m_simple_method();
+  + #endif
+                }
+  
+                if (method) {
+  ***************
+  *** 815,822 ****
+  --- 817,826 ----
+  
+                if (id == s_GFp) {
+                    new_curve = EC_GROUP_new_curve_GFp;
+  + #if !defined(OPENSSL_NO_EC2M)
+                } else if (id == s_GF2m) {
+                    new_curve = EC_GROUP_new_curve_GF2m;
+  + #endif
+                } else {
+                    rb_raise(rb_eArgError, "unknown symbol, must be :GFp or :GF2m");
+                }
+
+
   # ./configure
   # make && make install
 
@@ -222,10 +258,6 @@ VirtualHost設定
 
   $ rake db:seed RAILS_ENV=development
 
-サンプルデータを登録します。
-
-  $ rake db:seed:demo RAILS_ENV=development
-
 ======================================================================
  8.3 VirtualHost の反映
 ======================================================================
@@ -244,23 +276,70 @@ Apache を再起動します。
 
   メーラ画面 : http://192.168.0.2/
 
-次のユーザが登録されています。
 
-    管理者（システム管理者）
-      ユーザID   : admin
-      パスワード : admin
-
-    一般ユーザ（徳島　太郎）
-      ユーザID   : user1
-      パスワード : user1
-
-    一般ユーザ（阿波　花子）
-      ユーザID   : user2
-      パスワード : user2
-
-    一般ユーザ（吉野　三郎）
-      ユーザID   : user3
-      パスワード : user3
+管理画面にアクセスしてユーザを作成してください。
 
 **********************************************************************
+ 9 Postfixのインストール
+**********************************************************************
 
+既存のPostfixを削除します。
+
+  # /etc/init.d/postfix stop
+  # rpm -e --nodeps postfix
+
+Postfixをビルドしてインストールします。
+
+  # wget "http://vault.centos.org/6.5/os/Source/SPackages/\
+  >postfix-2.6.6-2.2.el6_1.src.rpm"
+  # rpm -ivh postfix-2.6.6-2.2.el6_1.src.rpm
+  # cd /usr/local/src
+  # wget "http://vda.sourceforge.net/VDA/postfix-2.6.5-vda-ng.patch.gz"
+  # gunzip postfix-2.6.5-vda-ng.patch.gz
+  # cp postfix-2.6.5-vda-ng.patch ~/rpmbuild/SOURCES/postfix-2.6.5-vda.patch
+  # cp /var/share/jorurimail/config/samples/postfix/postfix.spec \
+  > ~/rpmbuild/SPECS/
+  # yum install -y pcre-devel db4-devel openldap-devel \
+  > cyrus-sasl-devel  mysql-devel
+  # rpmbuild -ba ~/rpmbuild/SPECS/postfix.spec
+  # rpm -ivh ~/rpmbuild/RPMS/x86_64/postfix-2.6.6-2.2.el6.x86_64.rpm
+  
+  # vi /etc/yum.conf
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  exclude=postfix*
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+Postfixを設定します。
+
+  # cp /var/share/jorurimail/config/samples/postfix/*.cf \
+  > /etc/postfix/
+  # cp -R /var/share/jorurimail/config/samples/postfix/joruri \
+  > /etc/postfix/
+  (ファイル中のpasswordを変更してください)
+
+
+  # /etc/init.d/postfix start
+  # chkconfig postfix on
+
+**********************************************************************
+ 10 Dovecotのインストール
+**********************************************************************
+
+Dovecotをインストールします。
+
+  # yum -y install dovecot dovecot-mysql
+  
+Dovecotを設定します。
+
+  # cp /var/share/jorurimail/config/samples/dovecot/dovecot.conf \
+  > /etc/dovecot/
+  # cp /var/share/jorurimail/config/samples/dovecot/dovecot-sql.conf.ext \
+  > /etc/dovecot/
+  (ファイル中のpasswordを変更してください)
+  # cp //var/share/jorurimail/config/samples/dovecot/conf.d/* \
+  > /etc/dovecot/conf.d/
+
+  # /etc/init.d/dovecot start
+  # chkconfig dovecot on
+
+**********************************************************************
